# rust-sensors

./: Cargo.toml  README.md  cpu.rs  main.rs
